[project]
name = "agentic-misalignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49",
    "beautifulsoup4>=4.12.0",
    "google-generativeai>=0.8",
    "lxml>=4.9.0",
    "ollama>=0.6.0",
    "openai>=1.70",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "together>=1.2.0",
]
